checkpoint, added in makeup_type field
